--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -1,7 +1,21 @@
 $navbar-background: #3450A3;
 $primary: #43a047;
+//@import '~bootstrap/scss/bootstrap';
 
-@import '~bootstrap/scss/bootstrap';
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins';
+@import '~bootstrap/scss/root';
+@import '~bootstrap/scss/reboot';
+@import '~bootstrap/scss/grid';
+@import '~bootstrap/scss/code';
+@import '~bootstrap/scss/forms';
+@import '~bootstrap/scss/buttons';
+@import '~bootstrap/scss/input-group';
+@import '~bootstrap/scss/transitions';
+@import '~bootstrap/scss/nav';
+@import '~bootstrap/scss/navbar';
+
 @import '~bootstrap-vue/src/index.scss';
 
 
@@ -41,4 +55,8 @@ h1 {
 
 .input-group {
   margin-bottom: 9px;
+}
+
+.ml-auto {
+  margin-left: auto;
 }
