update dependencies and support mobileonly browser

--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -39,6 +39,7 @@ h1 {
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.16), 0 0 3px 0 rgba(0, 0, 0, 0.12);
   margin: 9px 0;
   flex-grow: 1;
+  position: relative;
 
   //&.col {
   //  margin-right: 9px;
