--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -73,3 +73,29 @@ h1 {
 .ml-auto {
   margin-left: auto;
 }
+
+pre:not(.json) {
+  background: #31363b;
+  color: #eff0f1;
+  padding: 10px;
+  margin-bottom: 1rem;
+
+  code {
+    &:not(.line)::before {
+      content: "➜ ";
+      color: #1cdc9a;
+    }
+
+    .keyword {
+      color: #1cdc9a;
+    }
+
+    .path {
+      color: #3daee9;
+    }
+
+    .string {
+      color: #f67400;
+    }
+  }
+}
