--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -2,21 +2,22 @@ $navbar-background: #3450A3;
 $primary: #43a047;
 //@import '~bootstrap/scss/bootstrap';
 
-@import '~bootstrap/scss/functions';
-@import '~bootstrap/scss/variables';
-@import '~bootstrap/scss/mixins';
-@import '~bootstrap/scss/root';
-@import '~bootstrap/scss/reboot';
-@import '~bootstrap/scss/grid';
-@import '~bootstrap/scss/code';
-@import '~bootstrap/scss/forms';
-@import '~bootstrap/scss/buttons';
-@import '~bootstrap/scss/input-group';
-@import '~bootstrap/scss/transitions';
-@import '~bootstrap/scss/nav';
-@import '~bootstrap/scss/navbar';
+@import '../../node_modules/bootstrap/scss/functions';
+@import '../../node_modules/bootstrap/scss/variables';
+@import '../../node_modules/bootstrap/scss/mixins';
+@import '../../node_modules/bootstrap/scss/root';
+@import '../../node_modules/bootstrap/scss/reboot';
+@import '../../node_modules/bootstrap/scss/grid';
+@import '../../node_modules/bootstrap/scss/code';
+@import '../../node_modules/bootstrap/scss/forms';
+@import '../../node_modules/bootstrap/scss/buttons';
+@import '../../node_modules/bootstrap/scss/custom-forms';
+@import '../../node_modules/bootstrap/scss/input-group';
+@import '../../node_modules/bootstrap/scss/transitions';
+@import '../../node_modules/bootstrap/scss/nav';
+@import '../../node_modules/bootstrap/scss/navbar';
 
-@import '~bootstrap-vue/src/index.scss';
+@import '../../node_modules/bootstrap-vue/src/index.scss';
 
 
 $bg-color: #eff0f1;
