--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -1,26 +1,31 @@
 $navbar-background: #3450A3;
 $primary: #43a047;
-//@import '~bootstrap/scss/bootstrap';
+@import 'bootstrap/scss/bootstrap';
 
-@import '../../node_modules/bootstrap/scss/functions';
-@import '../../node_modules/bootstrap/scss/variables';
-@import '../../node_modules/bootstrap/scss/mixins';
-@import '../../node_modules/bootstrap/scss/root';
-@import '../../node_modules/bootstrap/scss/reboot';
-@import '../../node_modules/bootstrap/scss/grid';
-@import '../../node_modules/bootstrap/scss/code';
-@import '../../node_modules/bootstrap/scss/forms';
-@import '../../node_modules/bootstrap/scss/buttons';
-@import '../../node_modules/bootstrap/scss/custom-forms';
-@import '../../node_modules/bootstrap/scss/input-group';
-@import '../../node_modules/bootstrap/scss/transitions';
-@import '../../node_modules/bootstrap/scss/nav';
-@import '../../node_modules/bootstrap/scss/navbar';
+//@import '../../node_modules/bootstrap/scss/functions';
+//@import '../../node_modules/bootstrap/scss/variables';
+//@import '../../node_modules/bootstrap/scss/mixins';
+//@import '../../node_modules/bootstrap/scss/root';
+//@import '../../node_modules/bootstrap/scss/reboot';
+//@import '../../node_modules/bootstrap/scss/grid';
+//@import '../../node_modules/bootstrap/scss/code';
+//@import '../../node_modules/bootstrap/scss/forms';
+//@import '../../node_modules/bootstrap/scss/buttons';
+//@import '../../node_modules/bootstrap/scss/custom-forms';
+//@import '../../node_modules/bootstrap/scss/input-group';
+//@import '../../node_modules/bootstrap/scss/transitions';
+//@import '../../node_modules/bootstrap/scss/nav';
+//@import '../../node_modules/bootstrap/scss/navbar';
 
-@import '../../node_modules/bootstrap-vue/src/index.scss';
+//@import '../../node_modules/bootstrap-vue/src/index.scss';
 
 
 $bg-color: #eff0f1;
+
+body {
+  background: $bg-color;
+}
+
 
 h1 {
   text-align: center;
